--- a/slideshow.yml
+++ b/slideshow.yml
@@ -1,17 +1,23 @@
 slideshow:
   create: slideshow
-  type: container
+  tag: div
   slide_duration: 5000
   transition_duration: 400
   every: [$slide_duration, .showNextSlide, $transition_duration]
   start_slide: 0
   zIndex: 1
   attr: { current_slide: $start_slide, zIndex: $zIndex}
-  contents: $slides
+  text: $wrapper
+  wrapper:
+    type: container
+    class: [slideshow-wrapper, biggest, relative]
+    derive: [slides]
+    contents: $slides
   effects: [drop]
+  class: [slideshow, relative, table-row]
   slides:
     - default:
-        class: [slide,widest,absolute top-left]
         derive: [zIndex]
         style: { z-index: $zIndex}
+        class: [slideshow-slide]
         show: no
