--- a/model_test.yml
+++ b/model_test.yml
@@ -1,7 +1,7 @@
-test:
+model_test:
   desc: Test model binding/watching
   dd_init:
-    moved: 0
+    moves: 0
     color: red
     colors: [red,orange,yellow,green,blue,indigo,violet]
   type: input_page
@@ -26,7 +26,7 @@ test:
           background-color: ~color
           color: ~colors[(colors.indexOf(color)+3) % colors.length]
         value: You chose `color`
-        on_mousemove: ~moves = moves+1
+        on_mousemove: ~++moves;
     - show_test: { show: ~checked  }
     - checked_and_switched:
         disabled: ~checked && switched
