--- a/slideshow.yml
+++ b/slideshow.yml
@@ -9,7 +9,7 @@ slideshow:
   attr: { current_slide: $start_slide, zIndex: $zIndex}
   contents: $slides
   effects: [drop]
-  class: [slideshow, relative, table-row]
+  class: [slideshow, relative, grid s1 m1 l1]
   slides:
     - default:
         derive: [zIndex]
