adapted forgot password to collection and moved it to user.yml

--- a/fields.yml
+++ b/fields.yml
@@ -163,8 +163,9 @@ first_name:
   valid: name
 
 forgot_password:
+  access: public
   desc: Click here if you have forgotten your password and you need to reset it
-  url: /password_changer/forgot
+  url: /user/forgot_password
 
 full_name:
   desc: Full name and surname
