started fixing wizard navigation

--- a/wizard.yml
+++ b/wizard.yml
@@ -33,13 +33,16 @@ wizard:
       derive: [name]
     text: $step_no$step_title
   contents: [$synopsis,$bookmarks]
-  step:
+  steps: []
+  step_container:
     type: empty
     class: [wizard-page]
-  steps: []
+  step:
+    actions_pane:
+      class: [wizard-navigation,widest]
+    actions: []
   prev:
     type: button
-    show: no
     name: Previous
     desc: Go to previous step
     action: trigger
@@ -47,18 +50,9 @@ wizard:
     class: [wizard-prev]
   next:
     type: submit
-    show: no
     name: Next
     desc: Go to next step
     class: [wizard-next]
-  navigation:
-    type: container
-    class: [wizard-navigation]
-    derive: [navigate,parent_path,prev,next]
-    contents: [merge: navigate]
-  navigate:
-    - $prev
-    - $next
 
 
 wizard_jump:
