push footer to bottom but not fixed position

--- a/footer.yml
+++ b/footer.yml
@@ -1,5 +1,5 @@
 footer:
   type: container
-  class: [tiny-font center-text,fixed bottom left,widest,light-grey]
+  class: [tiny-font center-text, absolute bottom-left,widest,light-grey]
   contents:
     - developed_by: { type: link }
