--- a/controls.yml
+++ b/controls.yml
@@ -25,6 +25,8 @@ alert_message:
   style: [height_watermark]
   text: $message
 
+anchor: { tag: a }
+
 background_image:
   background-image: url("$image_path/$id.png")
 
@@ -808,7 +810,8 @@ time:
   format: H:i
 
 titled_paragraph:
-  classes: div
+  tag: div
+  class: [titled_paragraph]
   text: $heading $phrase
   title: $id
   body: $name
@@ -818,9 +821,9 @@ titled_paragraph:
     text: $title
     class: [block]
   phrase:
-    derive: [name]
+    derive: [body]
     type: plain_text
-    text: $name
+    text: $body
   space: 30
 
 tri_input:
