added option panel

--- a/controls.yml
+++ b/controls.yml
@@ -836,6 +836,23 @@ twin_input:
   type: multi_input
   split: half
 
+option_panel:
+  tag: div
+  text: $header $body
+  header:
+    type: container
+    name: $parent_name
+    contents:
+      - p: { name: $parent_name, class: [inline-block] }
+      - chosen_$parent_id: { type: checkbox, class: [float-right] }
+  body:
+    id: body_$parent_id
+    tag: div
+    derive: [contents]
+    text: $contents
+    show: ~chosen_$parent_id
+
+
 vspace:
   mutable: false
   tag: div
