removed close button from  modal contents

--- a/modal.yml
+++ b/modal.yml
@@ -8,7 +8,7 @@ show:
     attr: { id: ""}
     class: [modal-dialog,relative,inline-block,white,brand-text]
     derive: [title_bar,close_button,body]
-    contents: [$title_bar,$close_button,$body]
+    contents: [$title_bar,$body]
   title_bar:
     tag: div
     class: [modal-title-bar, widest,pad,center-text,cursor-pointer]
