started working with user group access access levels

--- a/user.yml
+++ b/user.yml
@@ -339,11 +339,12 @@ login:
     - read_config: start_page
     - collection.values: [user, $email, partner, first_name, last_name, cellphone, start_page, start_url: "/ifnull(start_page,'$start_page')", role, attempts ]
     - collection.listing: [role, $role, base_roles: role]
+    - collection.listing: [user_group_member, [user: $email], groups: group]
     - if $attempts > 0:
           - collection.update: [user, $email, attempts: 0]
     - read_server: [HTTP_USER_AGENT,REMOTE_ADDR,REMOTE_HOST,REQUEST_URI]
     - collection.insert: [session, /sha1(last_insert_id()), user: $email, partner, start_time: /now(), HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
-    - auth.login: [$new_session_id, $role, $base_roles]
+    - auth.login: [$new_session_id, $email, $role, $base_roles, $groups]
     - close_dialog
     - redirect: $start_url
   audit:
