--- a/user.yml
+++ b/user.yml
@@ -117,6 +117,7 @@ confirm_registration:
         - cellphone
         - partner: $registrant_partner
         - role: $registrant_role
+    - write_session: new_user_id
     - let: { registrant_name: $first_name $last_name, registrant_email: $email }
     - clear_values: [first_name, last_name, email]
     - foreach:
@@ -448,7 +449,6 @@ profile:
     - roles: { attr: disabled }
   values:
     - collection.values: [session, $sid, user.title, user.first_name, user.last_name, user.cellphone, user.email, roles: user.role]
-    - clear_values: [password,role,attempts]
   actions:
     - profile_update: { validate: delta }
     - change_password: { action: dialog }
