reset login attempts after updating password

--- a/user.yml
+++ b/user.yml
@@ -491,7 +491,7 @@ update_password:
     - update_password
   post:
     - read_session: email
-    - collection.update: [user, $email, password: /password('$password')]
+    - collection.update: [user, $email, password: /password('$password'), attempts: 0]
     - clear_values
     - close_dialog: Password has been changed successfully
   audit: $email
