--- a/user.yml
+++ b/user.yml
@@ -304,7 +304,7 @@ list:
         - first_name
         - last_name
         - cellphone
-        - role: role.name
+        - role
         - status: /if(active,'active','inactive')
         - style: /if(active,'active','inactive')
         - actions: /if(active,'expand,slide,edit,deactivate','expand,slide,edit,activate')
