derive hint and use label instead of p for option panel

--- a/controls.yml
+++ b/controls.yml
@@ -578,8 +578,8 @@ option_panel:
     type: container
     name: $parent_name
     contents:
-      - p: { name: $parent_name, class: [inline-block] }
-      - chosen_$parent_id: { type: checkbox, class: [float-right] }
+      - label: { derive: [desc], name: $parent_name, class: [inline-block] }
+      - chosen_$parent_id: { derive: [desc], type: checkbox, class: [float-right] }
   body:
     id: body_$parent_id
     tag: div
