allow user to click and show terms and conditions

--- a/fields.yml
+++ b/fields.yml
@@ -13,7 +13,13 @@ administration:
   desc: Perform adminstrative duties
 
 agree_terms:
-  question: I have read and accepted the terms and conditions
+  question:
+    type: container
+    class: [pad-x pad-tiny]
+    contents:
+      - default: { class: [inline-block]}
+      - I have read and accepted the: { type: plain_text }
+      - terms_and_conditions: { type: link, action: dialog }
   desc: You must agree to the terms and conditions before continuing
   valid: equals(1)
   error: Must accept and agree to terms and conditions.
